# ForSelfLearn

./: .gitignore  README.md  build.gradle  platform.jks  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: libusbcamera-1.0.1.aar  libusbcamera-1.0.3.aar  libusbcamera.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ageAndGender.mnn  auth.properties  litepal.xml  voice_record_command.properties  yolov5n_shuffle_256x320_quan.mnn
app/src/main/assets/database/: delivered_robot_map.db
app/src/main/cpp/: mnnnetnative.cpp  mnnportraitnative.cpp
app/src/main/java/jni/: Usbcontorl.java  Usbjni.java
app/src/main/res/animator/: text_size.xml
app/src/main/res/color/: selector_item_applet_text.xml
app/src/main/res/drawable/: anim_login_start_loading.xml  application_svg.xml  background.xml  background3.xml  bg_business_item.xml  bg_button.xml  bg_button_1.xml  bg_explanation_acceptstation.xml  bg_explanation_item.xml  bg_explantion_btn.xml  bg_from_setting_edit.xml  bg_how_to_create_virtual_wall.xml  bg_img_halo.xml  bg_start_explanation_item.xml  bg_text_focused.xml  btn_bg.xml  business_svg.xml  checkbox.xml  cursor.xml  dialog_btn_false_bg.xml  dialog_btn_true_bg.xml  explain_svg.xml  guide_select_tv_bg.xml  guiding_goning.xml  have_sound_svg.xml  horn_svg.xml  ic_arrow_right.xml  ic_baseline_check_circle_outline_30.xml  ic_baseline_error_outline_24.xml  ic_btn_close.xml  ic_btn_open.xml  ic_robot_exception_3.xml  item1.xml  item2.xml  item3.xml  item4.xml  layer_list_progress_bar_download.xml  leadership_svg.xml  lline_dot_normal.xml  no_sound_svg.xml  (+100 more)
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml  dialog_add_area.xml  dialog_add_target_point.xml  dialog_can_not_delete_laser_map.xml  dialog_change_point.xml  dialog_changing_over.xml  dialog_chassis_exception.xml  dialog_choose_fix_map_id.xml  dialog_close_deadline_remind.xml  dialog_delete.xml  dialog_delete_laser_map.xml  dialog_download_apk.xml  dialog_edit_limit_speed_line.xml  dialog_expire_deadline_remind.xml  dialog_export_laser_map.xml  dialog_face_image.xml  dialog_factory_data_reset.xml  dialog_finish_task.xml  dialog_fromsetting.xml  dialog_identify.xml  dialog_loading.xml  dialog_process_click.xml  dialog_reset_factory_data.xml  dialog_reset_factory_data_status.xml  dialog_reset_sub_map.xml  dialog_robot_charging.xml  dialog_robot_dock_fail.xml  dialog_robot_in_lose.xml  (+150 more)
(+942 files in other folders)
